[package]
name = "mt6701"
version = "0.2.0"
edition = "2021"
authors = ["chaim <me@chaim.work>"]
license = "MIT"
repository = "https://github.com/kisy/mt6701"
description = "MT6701 driver in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
libm = "0.2.8"
nb = "1.1.0"

[dev-dependencies]
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
fugit = "0.3.7"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.9.0"
