[package]
name = "mt6701"
version = "0.2.5"
edition = "2021"
authors = ["chaim <me@chaim.work>"]
license = "MIT"
repository = "https://github.com/kisy/mt6701"
description = "MT6701 driver in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
libm = "0.2"
nb = "1.1"

[dev-dependencies]
cortex-m-rt = "0.7"
fugit = "0.3"
rp2040-boot2 = "0.3"
rp2040-hal = "0.9"
